Modified GitHub Link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="footer" id="footer">
         &copy Made by Onyx
         <div class="contact">
-            <a href="https://github.com/onyxkurbah" target="_blank"><img src="images/github.png">Github</a>
+            <a href="https://github.com/onyxkurbah/landing-page-odin" target="_blank"><img src="images/github.png">Github</a>
             <a href="https://www.linkedin.com/in/onyx-kurbah" target="_blank"><img src="images/linkedin.png">LinkedIn</a>
 
         </div>
