--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
 </div>
 
     <div class="footer" id="footer">
-        &copy Made by Onyx
+        <p>
+            &copy; Made by <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Onyx</a>
+        </p>
         <div class="contact">
             <a href="https://github.com/onyxkurbah/landing-page-odin" target="_blank"><img src="images/github.png">Github</a>
             <a href="https://www.linkedin.com/in/onyx-kurbah" target="_blank"><img src="images/linkedin.png">LinkedIn</a>
-
         </div>
     </div>
 </body>
